# libdgp

./: .gitignore  CMakeLists.txt
cmake/: dgp_add_tutorial.cmake  geometry-central.cmake  libdgp.cmake
doc/: cmake.md  collision_handing.md  curve smoothing.md  k-d_tree.md  parameterization.md
include/dgp/: Snaxl.h  VTKIO.h  arap.cpp  arap.h  barycentric_embedding.cpp  barycentric_embedding.h  bijective_parameterization.cpp  bijective_parameterization.h  corner_scaled_angles.cpp  corner_scaled_angles.h  dgp_inline.h  extract_kring.h  filling_holes.cpp  filling_holes.h  halfedge_opposite.cpp  halfedge_opposite.h  intersection2d.cpp  intersection2d.h  kdtree.h  local_isometric_parameterization.cpp  local_isometric_parameterization.h  lscm.cpp  lscm.h  mesh_tree.cpp  mesh_tree.h  read_labels.h  remove_unref.cpp  remove_unref.h  slice_laplacian.cpp  slice_laplacian.h  smoother.cpp  smoother.h  snaking.cpp  snaking.h  timer.h  unit_circle_points.cpp  unit_circle_points.h  vector_transport.cpp  vector_transport.h  vertex_edge_adjacency.cpp  (+3 more)
tutorial/: CMakeLists.txt
tutorial/ang_dist/: main.cpp
tutorial/arap/: main.cpp
tutorial/barycentric_embedding/: main.cpp
tutorial/bijective_parameterization/: main.cpp
tutorial/curve_smoother/: main.cpp
tutorial/curve_smoother_locally/: main.cpp
tutorial/curve_smoothing/: main.cpp
tutorial/glfw_test/: main.cpp
tutorial/kdtree/: main.cpp
tutorial/lscm/: main.cpp
tutorial/mesh_tree/: main.cpp
tutorial/sdf/: main.cpp
